-Quitada depende ngx-mat-timepicker incompatible de momento con angular  material 19 -Sustituido picker time por el nuevo MatTimepickerModule incluido en angular material 19

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -106,6 +106,10 @@
         },
         "mensajes": {
           "errorservicio": "{{operacion}} failed: {{mensaje}} - Additional error: {{erroradicional}}",
+          "errorfechainvalida": {
+            "mensaje": "The date is not correct.",
+            "titulo": "DateNotCorrect"
+          },
           "copiadoportapapeles": {
             "mensaje": "Data copied to clipboard",
             "titulo": "ClipboardCopy"
