- Label de columnas en tablas -> Angular MAterial 19 parece haber cambiado su color a negro. Fijamos blanco. - Columnas visibles en tablas -> internacionalizado para mostrar el label en el idioma requerido

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -60,6 +60,9 @@
           "anterior": "Previous page",
           "de": "of"
         },
+        "columnasvisibles":{
+          "selectall": "Select all"
+        },
         "frame": {
           "filtros": "Filters"
         },
